--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ static filter=lfs diff=lfs merge=lfs -text
 templates filter=lfs diff=lfs merge=lfs -text
 test.py filter=lfs diff=lfs merge=lfs -text
 MP3 filter=lfs diff=lfs merge=lfs -text
+dbeaver-ce_latest_amd64.deb filter=lfs diff=lfs merge=lfs -text
